<resources>
    <string name="app_name">Money Book</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string-array name="chart">
        <item>圓餅圖</item>
        <item>長條圖</item>
        <item>折線圖</item>
    </string-array>
    <string name="food_c">&#160;1.早餐&#160;&#160;&#160;&#160;2.早午餐&#160;&#160;3.午餐&#160;&#160;\n
        4.晚餐&#160;&#160;&#160;&#160;5.宵夜&#160;&#160;&#160;&#160;&#160;&#160;6.飲料&#160;&#160;&#160;&#160;\n
        7.點心&#160;&#160;&#160;&#160;8.水果&#160;&#160;&#160;&#160;&#160;&#160;9.食材&#160;&#160;&#160;</string>
    <string name="sock_c">&#160;1.上衣&#160;&#160;&#160;&#160;2.褲子&#160;&#160;&#160;&#160;3.外套\n
        4.洋裝&#160;&#160;&#160;&#160;5.裙子&#160;&#160;&#160;&#160;6.鞋子&#160;&#160;&#160;&#160;\n
        7.配件&#160;&#160;&#160;&#160;8.剪髮理容</string>
    <string name="home_c">&#160;1.家具&#160;&#160;&#160;&#160;2.水費&#160;&#160;&#160;&#160;3.電費&#160;&#160;&#160;&#160;\n
        4.瓦斯費&#160;&#160;5.用品&#160;&#160;&#160;&#160;6.網路&#160;&#160;&#160;&#160;\n
        7.房租管理費</string>
    <string name="bike_c">&#160;1.交通&#160;&#160;&#160;&#160;2.油錢&#160;&#160;&#160;&#160;3.停車費\n
        4.過路費&#160;&#160;5.洗車與保養"</string>
    <string name="book_c">&#160;1.學雜費&#160;&#160;2.補習費&#160;&#160;3.文具&#160;&#160;\n
        4.書籍&#160;&#160;&#160;&#160;5.雜誌</string>
    <string name="play_c">&#160;1.遊戲&#160;&#160;&#160;&#160;2.玩具&#160;&#160;&#160;&#160;3.電影&#160;&#160;\n
        4.旅遊&#160;&#160;&#160;&#160;5.運動</string>
    <string name="relationship_c">&#160;1.家人&#160;&#160;&#160;&#160;2.另一伴&#160;&#160;3.請客&#160;&#160;\n
        4.送禮&#160;&#160;&#160;&#160;5.外借</string>
    <string name="money_c">&#160;1.手續&#160;&#160;&#160;&#160;2.保險&#160;&#160;&#160;&#160;3.基金\n
        4.股票&#160;&#160;&#160;&#160;5.其他</string>
    <string name="healeh_c">&#160;1.醫檢&#160;&#160;&#160;&#160;2.勞健保費</string>
    <string name="thing_c">&#160;1.寶貝寵物&#160;&#160;&#160;&#160;2.雜記</string>
    <string name="c_3c">&#160;1.通信費&#160;&#160;&#160;&#160;2.3C產品</string>
    <string name="income_c">&#160;1.收入</string>
    <string name="title_activity_event">EventActivity</string>
</resources>
