<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.00"
                android:gravity="center"
                android:text="記帳類別"
                android:textSize="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="55dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="食"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/food_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.36"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="衣"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/sock_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.65"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="住"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/home_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="行"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/bike_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="育"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/book_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="樂"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/play_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="人"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/relationship_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="財"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/money_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="健"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/healeh_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="雜"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/thing_c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="3c"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/c_3c"
                    android:textSize="16dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="54dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.00"
                    android:background="@drawable/circle1"
                    android:gravity="center"
                    android:text="收"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:layout_marginLeft="20dp"
                    android:gravity="left"
                    android:text="@string/income_c"
                    android:textSize="16dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>